# mxrun

./: Cargo.toml  LICENSE  Makefile  README.md  mxrun.conf  xrun.conf
doc/: README.md
doc/manpage/: buildfarm.1.md
example/: Makefile  README.md  hello.c
src/: ansi.rs  ansi_ut.rs  app.rs  app_ut.rs  clidef.rs  main.rs  model.rs  model_ut.rs  runner.rs  runner_ut.rs  ui.rs  ui_ut.rs
