[package]
name = "mxrun"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
description = "Run one build entry across local and remote machines in parallel"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinythings/mxrun"
homepage = "https://github.com/tinythings/mxrun"
documentation = "https://docs.rs/mxrun"
keywords = ["build", "remote", "parallel", "tui", "rsync"]
categories = ["command-line-utilities", "development-tools"]

[workspace]

[dependencies]
clap = { version = "4.5.54", features = ["unstable-styles"] }
colored = "3.0.0"
portable-pty = "0.9.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
